INBOUND DELIVERY nuova logica LUVE

--- a/AUPSUP_HTML5_INBOUNDDELIV/webapp/i18n/i18n.properties
+++ b/AUPSUP_HTML5_INBOUNDDELIV/webapp/i18n/i18n.properties
@@ -290,6 +290,10 @@ Confirm=Conferma
 ERR_Selection_Row=Prego selezionare almeno una posizione.
 ERR_Confirm_Position_Text = Nota e Data di consegna sono campi obbligatori
 ERR_Deliveries_Mandatory = Inserire tutti i campi della consegna in posizione {0}
+ERR_Deliveries_Mandatory_Imballo = Inserire tutti gli imballi della consegna in posizione {0}
+ERR_Deliveries_Mandatory_Peso = Inserire tutti i pesi della consegna in posizione {0}
+ERR_Deliveries_Mandatory_ExtHuNumb = Inserire tutti i numeri esterni HU della consegna in posizione {0}
+ERR_Deliveries_Mandatory_Volume = Inserire tutti i Volumi della consegna in posizione {0}
 ERR_Confirmation_Type_Mandatory = Tipo consegna obbligatorio per la posizione {0}
 ERR_Sum_Schedulations = La somma delle quantit\u00E0 delle schedulazioni {0} eccede il totale di posizione.
 ERR_Price_Perc_Up = Il prezzo della posizione {0} eccede la percentuale superiore di deviazione.
@@ -410,3 +414,13 @@ volume=Volume
 #XTXT: 
 testo=Testo
 
+TYPE=Tipo
+
+NumeroRiferimento=Numero riferimento 
+
+ERR_Quant_Perc_Down_Single =  Ordine {0} la quantit\u00E0 inserita supera la percentuale di scostamento inferiore
+ERR_Quant_Perc_Up_Single = Ordine {0} la quantit\u00E0 inserita supera la percentuale di scostamento superiore
+
+NumExtHU = Numero ext. HU
+
+IMBALLO = Imballo
