--- a/AUPSUP_HTML5_INBOUNDDELIV/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_INBOUNDDELIV/webapp/i18n/i18n_en.properties
@@ -289,6 +289,10 @@ Confirm=Confirm
 ERR_Selection_Row=Please select one or more position.
 ERR_Confirm_Position_Text = Delivery Note and Planned Arrival Date are mandatory
 ERR_Deliveries_Mandatory = Please compile all deliveries fields for position {0}
+ERR_Deliveries_Mandatory_Imballo = Please compile all packagings for position {0}
+ERR_Deliveries_Mandatory_Peso = Please compile all weights for position {0}
+ERR_Deliveries_Mandatory_ExtHuNumb = Please compile all ext. HU numb. for position {0}
+ERR_Deliveries_Mandatory_Volume = Please compile all volumes for position {0}
 ERR_Confirmation_Type_Mandatory = Confirmation type is mandatory for position {0}
 ERR_Sum_Schedulations = Schedulation quantity sum for position {0} exceeds the total amount of position
 ERR_Price_Perc_Up = Position {0} price exceeds the percentage of upper deviation
@@ -414,3 +418,14 @@ volume=Volume
 #XTXT: 
 testo=Text
 
+TYPE=Type
+
+NumeroRiferimento=Reference numb.
+
+NumExtHU = Ext. HU numb.
+
+
+ERR_Quant_Perc_Down_Single = Order {0} quantity entered exceeds the downer limit
+ERR_Quant_Perc_Up_Single = Order {0} quantity entered exceeds the upper limit
+
+IMBALLO = Packaging
