--- a/AUPSUP_HTML5_INBOUNDDELIV/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_INBOUNDDELIV/webapp/i18n/i18n_it.properties
@@ -377,7 +377,7 @@ ERR_quant_colli = Attenzione inserire i colli o la quantit\u00E0
 NrColli=Nr. colli
  
 #XFLD: 
-QuantitaCollo=Quantit\u00E0 per collow
+QuantitaCollo=Quantit\u00E0 per collo
  
 #XFLD: 
 ADD=Aggiungi
@@ -414,7 +414,7 @@ volume=Volume
 #XTXT: 
 testo=Testo
 
-TYPE=Type
+TYPE=Tipo
 NumeroRiferimento=Numero riferimento 
 
 NumExtHU = Numero ext. HU
