Porting su LUVE QUA

--- a/AUPSUP_HTML5_CUSTOMIZING/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_CUSTOMIZING/webapp/i18n/i18n_en.properties
@@ -87,3 +87,9 @@ ZAPPPERSUP=Higher percentage
 ZAPPPERINF=Lower Percentage
 ZAPPGGSUP=Higher Num. Days
 ZAPPGGINF=Lower Num. Days
+
+NUM_INT_HU=Num. int. hu
+IS_PESO=check peso
+IS_VOLUME=check volume
+PACK_MAT_DEFAULT=pack mat default
+CAT_CONF_RIFER_NO_PROGR=cat conf no pogr.
