--- a/AUPSUP_HTML5_INBOUNDDELIV/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_INBOUNDDELIV/webapp/i18n/i18n_it.properties
@@ -299,6 +299,7 @@ ERR_Sum_Schedulations = La somma delle quantit\u00E0 delle schedulazioni {0} ecc
 ERR_Price_Perc_Up = Il prezzo della posizione {0} eccede la percentuale superiore di deviazione.
 ERR_Price_Perc_Down =  Il prezzo della posizione {0} eccede la percentuale inferiore di deviazione
 ERR_Empty_Deliveries = Aggiungi spedizioni alla posizione {0}
+ERR_Quantity = Le quantit\u00E0 inserite nelle spedizioni {0} superano la quantit\u00E0 della Conferma/Schedulazione
 
 MSG_Confirm_Position_Text=E\u00B4 sicuro di voler confermare le seguenti schedulazioni?
 #XTXT: 
@@ -424,3 +425,6 @@ ERR_Quant_Perc_Down_Single =  Ordine {0} la quantit\u00E0 inserita supera la per
 ERR_Quant_Perc_Up_Single = Ordine {0} la quantit\u00E0 inserita supera la percentuale di scostamento superiore
 
 IMBALLO = Imballo
+
+confirmationsData = Conferme Data
+confirmationsSpedizioni = Conferme Spedizioni
