--- a/AUPSUP_HTML5_CUSTOMIZING/webapp/i18n/i18n.properties
+++ b/AUPSUP_HTML5_CUSTOMIZING/webapp/i18n/i18n.properties
@@ -87,3 +87,9 @@ ZAPPPERSUP=Percentuale Superiore
 ZAPPPERINF=Percfentuale Inferiore
 ZAPPGGSUP=Num. giorni Superiore
 ZAPPGGINF=Num. giorni Inferiore
+
+NUM_INT_HU=Num. int. hu
+IS_PESO=check peso
+IS_VOLUME=check volume
+PACK_MAT_DEFAULT=pack mat default
+CAT_CONF_RIFER_NO_PROGR=cat conf no pogr.
