--- a/AUPSUP_HTML5_INBOUNDDELIV/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_INBOUNDDELIV/webapp/i18n/i18n_en.properties
@@ -298,6 +298,7 @@ ERR_Sum_Schedulations = Schedulation quantity sum for position {0} exceeds the t
 ERR_Price_Perc_Up = Position {0} price exceeds the percentage of upper deviation
 ERR_Price_Perc_Down = Position {0} price exceeds the percentage of lower deviation
 ERR_Empty_Deliveries = Add deliveries for position {0}
+ERR_Quantity = Le quantit\u00E0 inserite nelle spedizioni {0} superano la quantit\u00E0 della consegna
 
 MSG_Confirm_Position_Text=Are you sure you want to confirm selected deliveries?
 #XTXT: 
