--- a/AUPSUP_HTML5_INBOUNDDELIV/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_INBOUNDDELIV/webapp/i18n/i18n_en.properties
@@ -299,6 +299,7 @@ ERR_Price_Perc_Up = Position {0} price exceeds the percentage of upper deviation
 ERR_Price_Perc_Down = Position {0} price exceeds the percentage of lower deviation
 ERR_Empty_Deliveries = Add deliveries for position {0}
 ERR_Quantity = Le quantit\u00E0 inserite nelle spedizioni {0} superano la quantit\u00E0 della consegna
+ERR_Deliveries_Mandatory_Content = Pleas compile all content for position {0}
 
 MSG_Confirm_Position_Text=Are you sure you want to confirm selected deliveries?
 #XTXT: 
@@ -430,3 +431,9 @@ ERR_Quant_Perc_Down_Single = Order {0} quantity entered exceeds the downer limit
 ERR_Quant_Perc_Up_Single = Order {0} quantity entered exceeds the upper limit
 
 IMBALLO = Packaging
+DownloadSelected=Download selected
+ERR_Select_HU=Please select one or more HU
+editContent=Content
+
+confirmationsData = Confirmation Qty/Date
+confirmationsSpedizioni = Shipping
