--- a/AUPSUP_HTML5_SEARCH_HU/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_SEARCH_HU/webapp/i18n/i18n_en.properties
@@ -25,3 +25,6 @@ EXIDV=External Handling Unit
 WERKS=Plant
 TMENG=Quantity (To Be) Packed
 personalization= personalizzation
+ERR_Server_Timeout = Server timeout: please change filter value
+DownloadSelected=Download selected
+ERR_Select_HU=Please select one or more HU
