--- a/AUPSUP_HTML5_CUSTOMIZING/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_CUSTOMIZING/webapp/i18n/i18n_en.properties
@@ -93,3 +93,6 @@ IS_PESO=check peso
 IS_VOLUME=check volume
 PACK_MAT_DEFAULT=pack mat default
 CAT_CONF_RIFER_NO_PROGR=cat conf no pogr.
+UDM_PESO = Udm Peso
+UDM_VOLUME = Udm Volume
+IS_CONTENT=Content
