--- a/AUPSUP_HTML5_INBOUNDDELIV/webapp/i18n/i18n.properties
+++ b/AUPSUP_HTML5_INBOUNDDELIV/webapp/i18n/i18n.properties
@@ -300,6 +300,7 @@ ERR_Price_Perc_Up = Il prezzo della posizione {0} eccede la percentuale superior
 ERR_Price_Perc_Down =  Il prezzo della posizione {0} eccede la percentuale inferiore di deviazione
 ERR_Empty_Deliveries = Aggiungi spedizioni alla posizione {0}
 ERR_Quantity = Le quantit\u00E0 inserite nelle spedizioni {0} superano la quantit\u00E0 della Conferma/Schedulazione
+ERR_Deliveries_Mandatory_Content = Inserire tutti i Content della consegna in posizione {0}
 
 MSG_Confirm_Position_Text=E\u00B4 sicuro di voler confermare le seguenti schedulazioni?
 #XTXT: 
@@ -425,3 +426,9 @@ ERR_Quant_Perc_Up_Single = Ordine {0} la quantit\u00E0 inserita supera la percen
 NumExtHU = Numero ext. HU
 
 IMBALLO = Imballo
+DownloadSelected=Download hu selezionate
+ERR_Select_HU=prego selezionare almeno una HU da scaricare
+editContent=Content
+
+confirmationsData = Conferme Quant\Data
+confirmationsSpedizioni = Spedizioni
