--- a/AUPSUP_HTML5_SEARCH_HU/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_SEARCH_HU/webapp/i18n/i18n_it.properties
@@ -28,3 +28,6 @@ TMENG=Quantit\u00E0 (da imballare)
 
 titleMatnr=Ricerca materiali
 personalization= personalizza
+ERR_Server_Timeout = Server timeout: prego affinare la ricerca
+DownloadSelected=Download hu selezionate
+ERR_Select_HU=prego selezionare almeno una HU da scaricare
