--- a/AUPSUP_HTML5_LOGSORDSCHED/webapp/i18n/i18n_it_IT.properties
+++ b/AUPSUP_HTML5_LOGSORDSCHED/webapp/i18n/i18n_it_IT.properties
@@ -1,5 +1,5 @@
-title=Stato Conferme
-appTitle=Stato Conferme
+title=Storico Conferme
+appTitle=Storico Conferme
 appDescription=
 
 supplierOrdersHeader = Testata Piani di Consegna Fornitore
