--- a/AUPSUP_HTML5_SEARCH_HU/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_SEARCH_HU/webapp/i18n/i18n_en.properties
@@ -21,10 +21,12 @@ SYSID=System ID
 VENUM=Internal Handling Unit Number 
 VEPOS=Handling Unit Item
 POSNR=Delivery Item
-EXIDV=External Handling Unit
+EXIDV=Customer HU
 WERKS=Plant
 TMENG=Quantity (To Be) Packed
 personalization= personalizzation
 ERR_Server_Timeout = Server timeout: please change filter value
 DownloadSelected=Download selected
 ERR_Select_HU=Please select one or more HU
+
+EXDIV2=HU Supplier
