--- a/AUPSUP_HTML5_SEARCH_HU/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_SEARCH_HU/webapp/i18n/i18n_it.properties
@@ -22,7 +22,7 @@ SYSID=System ID
 VENUM=Numero Handling Unit interno
 VEPOS=Posizione Handling Unit
 POSNR=Posizione di Consegna
-EXIDV=Unit\u00E0 di gestione Esterna
+EXIDV=HU Cliente
 WERKS=Divisione
 TMENG=Quantit\u00E0 (da imballare)
 
@@ -31,3 +31,5 @@ personalization= personalizza
 ERR_Server_Timeout = Server timeout: prego affinare la ricerca
 DownloadSelected=Download hu selezionate
 ERR_Select_HU=prego selezionare almeno una HU da scaricare
+
+EXDIV2=HU Fornitore
