--- a/AUPSUP_HTML5_INBOUNDDELIV/webapp/i18n/i18n.properties
+++ b/AUPSUP_HTML5_INBOUNDDELIV/webapp/i18n/i18n.properties
@@ -432,3 +432,5 @@ editContent=Content
 
 confirmationsData = Conferme Quant\Data
 confirmationsSpedizioni = Spedizioni
+EXDIV2=HU Fornitore
+EXIDV=HU Cliente
