--- a/AUPSUP_HTML5_INBOUNDDELIV/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_INBOUNDDELIV/webapp/i18n/i18n_en.properties
@@ -409,7 +409,7 @@ Export_Excel=Export table data in Excel file
 printHU=Print selected HU
 
 VENUM=HU internal number
-EXIDV=HU external number
+EXIDV=HU customer
 
 #XTXT: 
 peso=Weight
@@ -437,3 +437,4 @@ editContent=Content
 
 confirmationsData = Confirmation Qty/Date
 confirmationsSpedizioni = Shipping
+EXDIV2=HU Supplier
