--- a/AUPSUP_HTML5_INBOUNDDELIV/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_INBOUNDDELIV/webapp/i18n/i18n_it.properties
@@ -432,3 +432,5 @@ confirmationsSpedizioni = Spedizioni
 DownloadSelected=Download hu selezionate
 ERR_Select_HU=prego selezionare almeno una HU da scaricare
 editContent=Content
+EXDIV2=HU Fornitore
+EXIDV=HU Cliente
