--- a/AUPSUP_HTML5_INBOUNDDELIV/webapp/i18n/i18n_sv.properties
+++ b/AUPSUP_HTML5_INBOUNDDELIV/webapp/i18n/i18n_sv.properties
@@ -161,3 +161,5 @@ ZTERM=Betalningsvillkor
 editContent=Content
 confirmationsData = Confirmation Qty/Date
 confirmationsSpedizioni = Shipping
+EXDIV2=HU supplier
+EXIDV=HU Customer
