hu dinamiche, esplosioni conferme d'ordine e piani, customizing e altro ancora

--- a/AUPSUP_HTML5_CUSTOMIZING/webapp/i18n/i18n.properties
+++ b/AUPSUP_HTML5_CUSTOMIZING/webapp/i18n/i18n.properties
@@ -96,3 +96,6 @@ CAT_CONF_RIFER_NO_PROGR=cat conf no pogr.
 UDM_PESO = Udm Peso
 UDM_VOLUME = Udm Volume
 IS_CONTENT=Content
+IS_HU_MANDATORY_INBOUND= Inserimento Hu obbligatorio nelle spedizioni?
+DEFAULT_PESO=Default peso
+DEFAULT_VOLUME=Default volume
