--- a/AUPSUP_HTML5_CUSTOMIZING/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_CUSTOMIZING/webapp/i18n/i18n_en.properties
@@ -96,3 +96,6 @@ CAT_CONF_RIFER_NO_PROGR=cat conf no pogr.
 UDM_PESO = Udm Peso
 UDM_VOLUME = Udm Volume
 IS_CONTENT=Content
+IS_HU_MANDATORY_INBOUND= Is Hu mandatory in inbound delivery?
+DEFAULT_PESO=Default peso
+DEFAULT_VOLUME=Default volume
