--- a/AUPSUP_HTML5_INBOUNDDELIV/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_INBOUNDDELIV/webapp/i18n/i18n_en.properties
@@ -288,7 +288,8 @@ Confirm=Confirm
 #XMSG: 
 ERR_Selection_Row=Please select one or more position.
 ERR_Confirm_Position_Text = Delivery Note and Planned Arrival Date are mandatory
-ERR_Deliveries_Mandatory = Please compile all deliveries fields for position {0}
+ERR_Deliveries_Mandatory_Quant = Please compile all quantity fiedl for position {0}
+ERR_Deliveries_Mandatory = Please enter at least one delivery for position {0}
 ERR_Deliveries_Mandatory_Imballo = Please compile all packagings for position {0}
 ERR_Deliveries_Mandatory_Peso = Please compile all weights for position {0}
 ERR_Deliveries_Mandatory_ExtHuNumb = Please compile all ext. HU numb. for position {0}
@@ -427,8 +428,8 @@ NumeroRiferimento=Reference numb.
 NumExtHU = Ext. HU numb.
 
 
-ERR_Quant_Perc_Down_Single = Order {0} quantity entered exceeds the downer limit
-ERR_Quant_Perc_Up_Single = Order {0} quantity entered exceeds the upper limit
+ERR_Quant_Perc_Down_Single = quantity entered exceeds the downer limit
+ERR_Quant_Perc_Up_Single = quantity entered exceeds the upper limit
 
 IMBALLO = Packaging
 DownloadSelected=Download selected
@@ -438,3 +439,4 @@ editContent=Content
 confirmationsData = Confirmation Qty/Date
 confirmationsSpedizioni = Shipping
 EXDIV2=HU Supplier
+NumeroProgressivoConferma = Progressive number
