--- a/AUPSUP_HTML5_INBOUNDDELIV/webapp/i18n/i18n_sv.properties
+++ b/AUPSUP_HTML5_INBOUNDDELIV/webapp/i18n/i18n_sv.properties
@@ -39,7 +39,8 @@ EMATN=Materialinformation
 EMNFR=Externt namn efter tillverkare
 ERR_Confirm_Position_Text =Leveransanteckning och planerat ankomstdatum är obligatoriskt
 ERR_Confirmation_Type_Mandatory =Bekräftelsetyp är obligatorisk för position {0}
-ERR_Deliveries_Mandatory =Vänligen sammanställa alla leveransfält för position {0}
+ERR_Deliveries_Mandatory_Quant = Please compile all quantity fiedl for position {0}
+ERR_Deliveries_Mandatory = Please enter at least one delivery for position {0}
 ERR_Empty_Deliveries =Lägg till leveranser för position {0}
 ERR_Export=Inga data hittades för att exportera
 ERR_NoOrderSelect=Välj minst en position.
@@ -163,3 +164,4 @@ confirmationsData = Confirmation Qty/Date
 confirmationsSpedizioni = Shipping
 EXDIV2=HU supplier
 EXIDV=HU Customer
+NumeroProgressivoConferma = Progressive number
