--- a/AUPSUP_HTML5_METASUPPLIER/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_METASUPPLIER/webapp/i18n/i18n_en.properties
@@ -98,3 +98,6 @@ noUploadPossible= No supplier found for this metasupplier impossible upload docu
 StatoMetafornitore=Status
 Disattivato=Disabled
 Attivato=Active
+
+huObbligatoriaPerPlant=Hu exceptions for plants
+plant=Plant
