--- a/AUPSUP_HTML5_METASUPPLIER/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_METASUPPLIER/webapp/i18n/i18n_it.properties
@@ -98,3 +98,6 @@ noUploadPossible= Attenzione nessun fornitore associato al metasupplier, impossi
 StatoMetafornitore=Stato
 Disattivato=Disattivato
 Attivato=Attivato
+
+huObbligatoriaPerPlant=Eccezioni HU sui plant
+plant=Plant
