--- a/AUPSUP_HTML5_METASUPPLIER/webapp/i18n/i18n_sv.properties
+++ b/AUPSUP_HTML5_METASUPPLIER/webapp/i18n/i18n_sv.properties
@@ -86,3 +86,5 @@ titleForm=Titel
 titleModMetaSup =Uppdatera meta-leverantör
 titleSuppliers=leverantörer
 uploadDoc=Ladda upp dokument
+huObbligatoriaPerPlant=HU Exceptions for plants
+plant=Plant
