--- a/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n.properties
+++ b/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n.properties
@@ -437,3 +437,4 @@ RangeDateEketEkeh=Data schedulazione
 
 ORIG_NETPR=Prezzo netto orig.
 ORIG_PEINH=Unit\u00E0 di prezzo orig.
+explodeAllSchedulation= Esplodi tutte le schedulazioni di tutte le posizioni
