--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n.properties
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n.properties
@@ -430,3 +430,4 @@ statusM=Medio
 statusMH=Medio Alto
 statusH=Alto
 statusColorTitle=Stato critico piani
+explodeAllSchedulation= Esplodi tutte le schedulazioni di tutte le posizioni
