--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_sv.properties
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_sv.properties
@@ -186,3 +186,5 @@ ZBD3T=Dagars rabatt 3
 ZENTRATA=Progressiv mottagen
 ZGTYP=Certifierad kategori
 ZTERM=Betalningsvillkor
+
+explodeAllSchedulation= Explode all positions schedulations
