--- a/AUPSUP_HTML5_INBOUNDDELIV/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_INBOUNDDELIV/webapp/i18n/i18n_it.properties
@@ -289,7 +289,8 @@ Confirm=Conferma
 #XMSG: 
 ERR_Selection_Row=Prego selezionare almeno una posizione.
 ERR_Confirm_Position_Text = Nota e Data di consegna sono campi obbligatori
-ERR_Deliveries_Mandatory = Inserire tutti i campi della consegna in posizione {0}
+ERR_Deliveries_Mandatory_Quant = Inserire tutte le quantit\u00E0 della consegna in posizione {0}
+ERR_Deliveries_Mandatory = Inserire almeno una spedizione per la consegna in posizione {0}
 ERR_Deliveries_Mandatory_Imballo = Inserire tutti gli imballi della consegna in posizione {0}
 ERR_Deliveries_Mandatory_Peso = Inserire tutti i pesi della consegna in posizione {0}
 ERR_Deliveries_Mandatory_ExtHuNumb = Inserire tutti i numeri esterni HU della consegna in posizione {0}
@@ -422,8 +423,8 @@ NumeroRiferimento=Numero riferimento
 NumExtHU = Numero ext. HU
 
 
-ERR_Quant_Perc_Down_Single =  Ordine {0} la quantit\u00E0 inserita supera la percentuale di scostamento inferiore
-ERR_Quant_Perc_Up_Single = Ordine {0} la quantit\u00E0 inserita supera la percentuale di scostamento superiore
+ERR_Quant_Perc_Down_Single =  La quantit\u00E0 inserita supera la percentuale di scostamento inferiore
+ERR_Quant_Perc_Up_Single = La quantit\u00E0 inserita supera la percentuale di scostamento superiore
 
 IMBALLO = Imballo
 
@@ -434,3 +435,4 @@ ERR_Select_HU=prego selezionare almeno una HU da scaricare
 editContent=Content
 EXDIV2=HU Fornitore
 EXIDV=HU Cliente
+NumeroProgressivoConferma = Numero Progressivo Conferma
