--- a/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_en_EN.properties
+++ b/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_en_EN.properties
@@ -442,3 +442,4 @@ RangeDateEketEkeh=Delivery date
 
 ORIG_NETPR=Orig. net price
 ORIG_PEINH=Orig. price unit
+explodeAllSchedulation= Explode all positions schedulations
