--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_en.properties
@@ -438,3 +438,4 @@ statusM=Medium Critical
 statusMH=Medium High Critical
 statusH=High Critical
 statusColorTitle=Critical order status
+explodeAllSchedulation= Explode all positions schedulations
