--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_it_IT.properties
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_it_IT.properties
@@ -429,3 +429,4 @@ statusM=Medio
 statusMH=Medio Alto
 statusH=Alto
 statusColorTitle=Stato critico piani
+explodeAllSchedulation= Esplodi tutte le schedulazioni di tutte le posizioni
