--- a/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_sv.properties
+++ b/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_sv.properties
@@ -188,3 +188,7 @@ ZBD3T=Dagars rabatt 3
 ZENTRATA=Progressiv mottagen
 ZGTYP=Certifierad kategori
 ZTERM=Betalningsvillkor
+
+DocType= Document type
+ErrorDocType=Select a document type
+DownloadSel=Download
