Traduzioni e modifica estrazione log conferme

--- a/AUPSUP_HTML5_NONCONFORMITA/webapp/i18n/i18n_pl.properties
+++ b/AUPSUP_HTML5_NONCONFORMITA/webapp/i18n/i18n_pl.properties
@@ -1,53 +1,53 @@
-appTitle=Powiadomienia dotyczące jakości
-BU=Jednostka biznesowa
-Cause=Przyczyny
-close=Blisko
-completed=Zakończony
-Detail =Szczegółowe porady
-DettaglioTestata =Szczegóły nagłówka
-Dettpos =Szczegóły informacji
-DettTestata =Nagłówek informacji
-Difetti=Wada
-EBELN=Zakup. Ord. Num.
-EBELP=Zakup. Ord. Pozycja
-ERNAM_TEXT=Twórca
-ERR_Export=Nessun dato da esportare
-ERR_file_not_found=Nie znaleziono pliku
-ERR_file_size =Plik ostrzeżenia przekracza rozmiar 5 MB
-ERR_Selection_Row=Wybierz jedną lub więcej pozycji.
-ERR_Type_missmatch =Dozwolone są tylko xlxs, docx, pdf, txt
-Export_Excel=Eksportuj dane tabeli w pliku Excel
-Header=Informacje w nagłówku
-IDNLF=Kod materiału dostawcy
-inProgress=W trakcie
-INPUTXT =Wprowadzanie tekstu
-Interventi=Interwencje
-Item=informacje o produkcie
+ERR_Export=Brak danych do wyeksportowania
+MSG_Confirm_Text=Czy na pewno chcesz potwierdzić?
 LIFNR=Dostawca
 LIFNUM=Dostawca
-LONGTXT =Historia
-materialDescr=Opis materiału
-MATNR=Kod materiału
-MATXT=Opis materiału
-METASUP=Metasupplier
-Misure=Środki
-MSG_Confirm_Text=Czy na pewno chcesz potwierdzić?
-NAME1_WRK =Roślina
-OK_MSG=poprawnie opracowane
-OK_Upload=Plik został poprawnie przesłany
-QMNUM=Qual. Nie. Numer
-QMTXT=Qual. Nie. Tekst
-REVLV=Status
-RKMNG=Ilość
-SERIALNR=Numer seryjny
-status=Status
 supplier=Dostawca
-tipoAvviso=Qual. Nie. Rodzaj
-Tipologia=Rodzaj
-title=Powiadomienia dotyczące jakości
-Title2=Przyczyny - środki - interwencje
-titleMatnr=Wyszukaj materiał
-TXT =Tekst
-WERKS=Roślina
 XBLNR =Dowód dostawy / faktura
+ERR_Type_missmatch =Dozwolone są tylko pliki xlxs, docx, pdf, txt
+Misure=Działania korygujące
+Export_Excel=Eksportuj dane tabeli do pliku Excel
+LONGTXT =Historia
+RKMNG=Ilość
+Item=Informacje o produkcie
+Header=Informacje w nagłówku
+Interventi=Interwencje
+BU=Jednostka gospodarcza
+MATNR=Kod materiału
+IDNLF=Kod materiału dostawcy
+METASUP=Dostawca
+DettTestata =Nagłówek informacji
+ERR_file_not_found=Nie znaleziono pliku
+EBELN=Numer dokumentu zaopatrzeniowego
+QMNUM=Numer reklamacji
+SERIALNR=Numer seryjny
 ZNOME=Odpowiedzialny
+materialDescr=Opis materiału
+MATXT=Opis materiału
+QMTXT=Opis reklamacji
+ERR_file_size =Ostrzeżenie: plik przekracza 5 Mb
+OK_Upload=Plik został poprawnie przesłany
+OK_MSG=Poprawnie opracowane
+appTitle=Powiadomienia dotyczące jakości
+Cause=Powód
+EBELP=Pozycja dokumentu zaopatrzeniowego
+Title2=Przyczyny - środki - interwencje
+title=Reklamacja
+Tipologia=Rodzaj
+tipoAvviso=Rodzaj reklamacji
+REVLV=Status
+status=Status
+Detail =Szczegółowe zgłoszenia
+Dettpos =Szczegóły informacji
+DettaglioTestata =Szczegóły nagłówka
+TXT =Tekst
+ERNAM_TEXT=Utworzone przez
+inProgress=W trakcie
+Difetti=Wada
+INPUTXT =Wprowadzanie tekstu
+ERR_Selection_Row=Wybierz jedną lub więcej pozycji.
+titleMatnr=Wyszukaj materiał
+NAME1_WRK =Zakład
+WERKS=Zakład
+completed=Zakończony
+close=Zamknij
