--- a/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n_pl.properties
+++ b/AUPSUP_HTML5_APR_SCDAGR/webapp/i18n/i18n_pl.properties
@@ -1,48 +1,48 @@
 AddNota=Dodaj notatkę (opcjonalnie)
-advice =Rada
+advice =Ostrzeżenie
 advice_msg =Potrzebujesz harmonogramu modów Prob
-approva=Zatwierdzać
-approveReject=Zatwierdzić odrzucenie
-appTitle=Potwierdzenie Zatwierdź
-changeRequest=Żądanie zmiany
-clearFilter=Czysty filtr
-close =Annulla
+approva=Zatwierdź
+approveReject=Zatwierdź/Odrzuć
+appTitle=Zatwierdzenie
+changeRequest=Zmiana
+clearFilter=Usuń filtr
+close =Anuluj
 COMMENT=Komentarz
-Confirm=Potwierdzać
+Confirm=Zatwierdź
 confirmations =Potwierdzenia
 correctConfirmData =Dane poprawnie opracowane
 correctConfirmPositions =Pozycje poprawnie potwierdzone
-dataConferma=Data potwierdzić
+dataConferma=Data potwierdzenia
 dataRichiesta=Żądana data
 date =Data
 deltaGG=Dzień Delta
 deltaProgr=Delta progressivo
 deltaQuant=Delta quantit \ u00E0
 deltaQuantita=Delta Qty
-EBELN=Zakup.Doc.
+EBELN=Dokument zakupowy
 EBELP=Pozycja
-EBTYP=Conf.Cat.
-EINDT=Data dostarczenia
-EKGRP=Grupa zakupów
-EKORG=Organizacja zakupów
-ERR_Confirmation_In_Corso_Approvazione =Potwierdzenie zamówienia w trakcie na wybrane stanowisko.
-ERR_Export=Nie znaleziono zamówień do wyeksportowania
-ERR_NoOrderSelect=Wybierz co najmniej jedną pozycję.
-Esegui=Wykonać
+EBTYP=Typ potwierdzenia
+EINDT=Data dostawy
+EKGRP=Grupa zakupowa
+EKORG=Dział zaopatrzenia
+ERR_Confirmation_In_Corso_Approvazione =Istnieje otwarte potwierdzenie dla wybranej pozycji
+ERR_Export=Brak zamówień do wyeksportowania
+ERR_NoOrderSelect=Wybierz co najmniej jedną pozycję
+Esegui=Wykonaj
 ETENR=Linia harmonogramu
-filter=Filtr:
-IDNLF=Co tam. Mata.
+filter=Filtr
+IDNLF=Numer artykułu dostawcy
 INCO1=Incoterms (część 1)
 legend =Legenda statusu
 LIFNR=Dostawca
-LPEIN=Kategoria Data dostawy
+LPEIN=Typ daty dostawy
 MATNR=Materiał
 MENGE=Ilość
 MENGE_NEW=Nowa ilość
 MessConf=Czy na pewno chcesz potwierdzić cenę dla wybranych pozycji?
-MessReject=Czy na pewno chcesz odrzucić wybrane stanowiska?
-METASUP=Metasupplier
-MNG02=Zaangażowana ilość
+MessReject=Czy na pewno chcesz odrzucić wybrane pozycje?
+METASUP=Metadostawca
+MNG02=Potwierdzona ilość
 MSG_Confirm_Reject_Text =Chcesz potwierdzić tę operację?
 MSG_NO_TO_CONFIRM=Nie znaleziono danych
 NAME1=Nazwa Dostawcy
@@ -51,29 +51,29 @@ NETPR_NEW=Nowa cena netto
 noData=Nie znaleziono danych
 PEINH=Jednostka ceny
 PEINH_NEW=Nowa jednostka ceny
-percDiffProgr=% differenza progressivo
-positionConfirmation =Zatwierdzić odrzucenie
-progConfermato=Progressivo confermato
-progRichiesto=Progressivo richiesto
+percDiffProgr=% różnicy (narastający)
+positionConfirmation =Zatwierdź / Odrzuć
+progConfermato=Krok potwierdzony
+progRichiesto=Krok żądany
 purchaseOrganization=Organizacja zakupów
-qtaConfermata=Quantit \ u00E0 confermata
-qtaRichiesta=Quantit \ u00E0 richiesta
-quantitaConferma=Ilość potwierdź
+qtaConfermata=Ilość  potwierdzona
+qtaRichiesta=Ilość  żądana
+quantitaConferma=Ilość potwierdzona
 quantitaRichiesta=Żądana ilość
-Reject=Odrzucać
-rifiuta=Odrzucać
-SchedMod=Harmonogram Mod.
+Reject=Odrzuć
+rifiuta=Odrzuć
+SchedMod=Harmonogram modyfikacji
 schedulations=Harmonogramy
-schedules =harmonogramy
+schedules =Harmonogramy
 status =Status
 statusColorTitle=Legenda stanu koloru
 supplier=Dostawca
-SYSID=Identyfikator systemu
-title=Potwierdzenie Zatwierdź
+SYSID=Numer identyfikacyjny
+title=Zatwierdź potwierdzenie
 titleModOds=Żądanie zmiany zamówienia
 TXZ01=Opis materiału
 WEMNG=Dostarczona ilość
-WERKS=Roślina
-ZFINVALIDATA=Koniec dt
-ZINVALIDITA=Rozpocznij dt
-ZTERM=Warunki płatności
+WERKS=Zakład
+ZFINVALIDATA=Data końcowa
+ZINVALIDITA=Data początkowa
+ZTERM=Warunek płatności
