app gestione documenti

--- a/AUPSUP_HTML5_DOC_MANAG/webapp/i18n/i18n.properties
+++ b/AUPSUP_HTML5_DOC_MANAG/webapp/i18n/i18n.properties
@@ -1,3 +1,49 @@
 title=Document management
 appTitle=Document management
 appDescription=
+METASUP=Meta fornitore
+supplier = Fornitore
+supplierDescr = Descr. Forn.
+docType=Tipo documento
+DocTipologia=Tipologia documento
+attivo=ATTIVO
+inattivo=INATTIVO
+OrdiniAperti=Ordini aperti
+NonConformita=Non conformit\u00E0
+Offerte=Offerte
+Generale=Generale
+version=Ultima versione
+generalSection=Sezione generale
+processSection=Sezione di processo
+object=Oggetto relazionato
+docTypeDescr=Descrizione tipo documento
+downloadDate=Data download
+versionState=Stato versione
+workflow=Workflow
+uploadDate=Data upload
+uploadExpireDate=Data scadenza upload
+docValidityDate=Data fine validit\u00E0 documento
+creationDate=Data pubblicazione
+object=Oggetto relazionato
+toRead=Da leggere
+read=Letti
+toUpload=Da caricare
+uploaded=Caricati
+expDate=Data scadenza
+DUR=Durcs
+COND=Condizioni Generali Acquisto
+REI=Registro Imprese
+LMI=Lavoro Minorile
+VAL=Valutazione Fornitore
+rifiutato=rifiutato
+approvato=approvato
+inApprovazione=in approvazione
+attivo=attivo
+inattivo=inattivo
+documentDetail=Dettaglio documenti
+TMA=Caratteristiche Tipologia Prodotto
+OFF=Offerta
+MAT=Disegno Materiale
+ALL=Allegati
+R8D=Report 8D
+ADD=Addebito Costi
