--- a/AUPSUP_HTML5_DOC_MANAG/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_DOC_MANAG/webapp/i18n/i18n_en.properties
@@ -1,3 +1,3 @@
-title=Title
-appTitle=AUPSUP_HTML5_DOC_MANAG
-appDescription=App Description
+title=Document management
+appTitle=Document management
+appDescription=
