--- a/AUPSUP_HTML5_DOC_MANAG/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_DOC_MANAG/webapp/i18n/i18n_en.properties
@@ -1,3 +1,49 @@
 title=Document management
 appTitle=Document management
 appDescription=
+METASUP=Metasupplier
+supplier = Supplier
+supplierDescr = Supplier descr.
+docType=Document type
+DocTipologia=Document kind
+attivo=ACTIOVE
+inattivo=INACTTIVE
+OrdiniAperti=Open orders
+NonConformita=Quality Notifications
+Offerte=Quotations
+Generale=Generic
+version=Last version
+generalSection=General section
+processSection=Process section
+object=Related object
+docTypeDescr=Doc type description
+downloadDate=Data download
+versionState=Version status
+workflow=Workflow
+uploadDate=Data upload
+uploadExpireDate=Expire upload date
+docValidityDate=Expired document validity date
+creationDate=Creation date
+toRead=To read
+read=Read
+toUpload=To upload
+uploaded=Uploaded
+expDate=Expired date
+DUR=Durc
+COND=General purchase conditions
+REI=Business Register
+LMI=Child labor
+VAL=Supplier evaluation
+rifiutato=refused
+approvato=approved
+inApprovazione=to approve
+attivo=active
+inattivo=inactive
+documentDetail=Document detail
+TMA=Characteristics Product Type
+OFF=Offer
+MAT=Material Design
+ALL=Attachments
+R8D=Report 8D
+ADD=Charging Costs
+OK_approvata=Object approved
