--- a/AUPSUP_HTML5_DOC_MANAG/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_DOC_MANAG/webapp/i18n/i18n_it.properties
@@ -1,5 +1,5 @@
-title=Document management
-appTitle=Document management
+title=Gestione documenti
+appTitle=Gestione documenti
 appDescription=
 METASUP=Meta fornitore
 supplier = Fornitore
