JOB pulizia ordini appesi

--- a/AUPSUP_HTML5_LOGSORDSCHED/webapp/i18n/i18n_pl.properties
+++ b/AUPSUP_HTML5_LOGSORDSCHED/webapp/i18n/i18n_pl.properties
@@ -216,3 +216,4 @@ ZBD3T-Termin płatności dla trzeciego progu upustu
 ZENTRATA-Otrzymano
 ZGTYP-Typ certyfikatu
 ZTERM-Warunek płatności
+skippata=System approval
