--- a/AUPSUP_HTML5_CONTRACTS/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_CONTRACTS/webapp/i18n/i18n_it.properties
@@ -1,5 +1,5 @@
-title=Ordini chiusi
-appTitle=Ordini chiusi
+title=Contratti
+appTitle=Contratti
 appDescription=
 
 supplierOrdersHeader = Testata Piani di Consegna Fornitore
@@ -419,8 +419,7 @@ PLANT_DESCR = Plant/Descrizione
 SaveAndClose=Salva e chiudi
 
 ERR_file_not_found= Nessun documento trovato per l\u00B4ordine selezionato
-
-FROZEN=Periodo freezato
+FROZEN=Periodo congelato
 
 NUMINTCONF=Num int conf
 
@@ -429,9 +428,7 @@ statusML=Medio Basso
 statusM=Medio 
 statusMH=Medio Alto
 statusH=Alto
-
 statusColorTitle=Stato critico ordini
-
 RangeDateEketEkeh=Data schedulazione
 
 
@@ -440,6 +437,5 @@ ORIG_PEINH=Unit\u00E0 di prezzo orig.
 explodeAllSchedulation= Esplodi tutte le schedulazioni di tutte le posizioni
 
 DocType= Tipo documento
-
 ErrorDocType=Selezionare un tipo documento
 DownloadSel=Download
