--- a/AUPSUP_HTML5_CONTRACTS/webapp/i18n/i18n.properties
+++ b/AUPSUP_HTML5_CONTRACTS/webapp/i18n/i18n.properties
@@ -1,5 +1,5 @@
-title=Ordini chiusi
-appTitle=Ordini chiusi
+title=Contratti
+appTitle=Contratti
 appDescription=
 
 supplierOrdersHeader = Testata Piani di Consegna Fornitore
