--- a/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_it.properties
@@ -439,3 +439,4 @@ explodeAllSchedulation= Esplodi tutte le schedulazioni di tutte le posizioni
 DocType= Tipo documento
 ErrorDocType=Selezionare un tipo documento
 DownloadSel=Download
+lastEkesDate=Data ultima conf.
