--- a/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_sv.properties
+++ b/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_sv.properties
@@ -192,3 +192,4 @@ ZTERM=Betalningsvillkor
 DocType= Document type
 ErrorDocType=Select a document type
 DownloadSel=Download
+lastEkesDate=Last conf. date
