--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n.properties
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n.properties
@@ -431,3 +431,6 @@ statusMH=Medio Alto
 statusH=Alto
 statusColorTitle=Stato critico piani
 explodeAllSchedulation= Esplodi tutte le schedulazioni di tutte le posizioni
+
+lastEkesDate=Last conf. date
+noConfirms=No confirms
