--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_pl.properties
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_pl.properties
@@ -186,3 +186,5 @@ ZBD3T=Termin płatności dla trzeciego progu upustu
 ZENTRATA=Otrzymano
 ZGTYP=Typ certyfikatu
 ZTERM=Warunek płatności
+lastEkesDate=Last conf. date
+noConfirms=No confirms
