--- a/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n.properties
+++ b/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n.properties
@@ -443,3 +443,6 @@ DocType= Tipo documento
 
 ErrorDocType=Selezionare un tipo documento
 DownloadSel=Download
+
+lastEkesDate=Last conf. date
+noConfirms=No confirms
