--- a/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_en_EN.properties
+++ b/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_en_EN.properties
@@ -447,3 +447,4 @@ explodeAllSchedulation= Explode all positions schedulations
 DocType= Document type
 ErrorDocType=Select a document type
 DownloadSel=Download
+lastEkesDate=Last conf. date
