--- a/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_it_IT.properties
+++ b/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_it_IT.properties
@@ -438,3 +438,4 @@ explodeAllSchedulation= Esplodi tutte le schedulazioni di tutte le posizioni
 DocType= Tipo documento
 ErrorDocType=Selezionare un tipo documento
 DownloadSel=Download
+lastEkesDate=Data ultima conf.
