--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_en.properties
@@ -439,3 +439,5 @@ statusMH=Medium High Critical
 statusH=High Critical
 statusColorTitle=Critical order status
 explodeAllSchedulation= Explode all positions schedulations
+lastEkesDate=Last conf. date
+noConfirms=No confirms
