--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_it_IT.properties
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_it_IT.properties
@@ -430,3 +430,5 @@ statusMH=Medio Alto
 statusH=Alto
 statusColorTitle=Stato critico piani
 explodeAllSchedulation= Esplodi tutte le schedulazioni di tutte le posizioni
+lastEkesDate=Data ultima conf.
+noConfirms=No confirms
