--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_sv.properties
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_sv.properties
@@ -188,3 +188,6 @@ ZGTYP=Certifierad kategori
 ZTERM=Betalningsvillkor
 
 explodeAllSchedulation= Explode all positions schedulations
+
+lastEkesDate=Last conf. date
+noConfirms=No confirms
