--- a/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_en.properties
@@ -23,8 +23,9 @@ quant = Quant
 searchOrders = Search Orders
 
 correctConfirmPositions = Positions correctly elaborated
-positionNotConfirmable = Positions {0} are not confirmable
-allPositionNotConfirmable = All selected order positions can not be confirmed
+positionNotConfirmable = Orders & position: {0} are locked by other users. Is not possible to confirm
+allPositionNotConfirmable = Tutte le posizioni degli ordini selezionate non possono essere confermate in quanto elaborate da altri utenti
+ 
  
 #MESSAGES:
 noOrderFound = No orders found
