--- a/AUPSUP_HTML5_CONTRACTS/webapp/i18n/i18n.properties
+++ b/AUPSUP_HTML5_CONTRACTS/webapp/i18n/i18n.properties
@@ -23,8 +23,8 @@ quant = Quantit\u00E0
 searchOrders = Ricerca Ordini
 
 correctConfirmPositions = Posizioni elaborate correttamente
-positionNotConfirmable = Posizioni {0} non sono confermate
-allPositionNotConfirmable = Tutte le posizioni degli ordini selezionate non possono essere confermate
+positionNotConfirmable = Gli ordini-posizione {0} sono elaborate da altri utenti. Non è possibile confermarli.
+allPositionNotConfirmable = Tutte le posizioni degli ordini selezionate non possono essere confermate in quanto elaborate da altri utenti
  
 #MESSAGES:
 noOrderFound = Non sono stati trovati Ordini
