--- a/AUPSUP_HTML5_CONTRACTS/webapp/i18n/i18n_en_EN.properties
+++ b/AUPSUP_HTML5_CONTRACTS/webapp/i18n/i18n_en_EN.properties
@@ -23,8 +23,8 @@ quant = Quant
 searchOrders = Search Orders
 
 correctConfirmPositions = Positions correctly elaborated
-positionNotConfirmable = Positions {0} are not confirmable
-allPositionNotConfirmable = All selected order positions can not be confirmed
+positionNotConfirmable = Positions {0} are not confirmable. Are locked by other users.
+allPositionNotConfirmable = All selected order positions can not be confirmed. Are locked by other users.
  
 #MESSAGES:
 noOrderFound = No orders found
