--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_en.properties
@@ -23,8 +23,8 @@ quant = Quant
 searchOrders = Search Orders
 
 correctConfirmPositions = Positions correctly elaborated
-positionNotConfirmable = Positions {0} are not confirmable
-allPositionNotConfirmable = All selected order positions can not be confirmed
+positionNotConfirmable = Orders & position: {0} are locked by other users. Is not possible to confirm
+allPositionNotConfirmable = All selected order positions can not be confirmed. Are locked by other users
  
 #MESSAGES:
 noOrderFound = No orders found
