--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_en_EN.properties
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_en_EN.properties
@@ -1,5 +1,5 @@
-title=Purchase orders
-appTitle=Purchase orders
+title=Scheduling Agreement
+appTitle=Scheduling Agreement
 appDescription=
 
 supplierOrdersHeader = Supplier Orders Headers
@@ -232,7 +232,7 @@ WERKS=Plant
 IDNLF=Supp.Mat.No.
  
 #XTXT: 
-ETENR=Schedulation numb.
+ETENR=Num Schedulation
  
 #XTXT: 
 EINDT=Delivery Date
@@ -427,9 +427,10 @@ PLANT_DESCR = Plant/Description
 SaveAndClose=Save and Close
 
 ERR_file_not_found= No document found for selected order
+FROZEN=Forzen Period
 
-FROZEN=Frozen period
-NUMINTCONF=Int. conf. numb.
+NUMINTCONF=Int conf. numb.
+
 
 statusL=Low Critical
 statusML=Medium Low Critical
@@ -437,14 +438,6 @@ statusM=Medium Critical
 statusMH=Medium High Critical
 statusH=High Critical
 statusColorTitle=Critical order status
-RangeDateEketEkeh=Delivery date
-
-
-ORIG_NETPR=Orig. net price
-ORIG_PEINH=Orig. price unit
 explodeAllSchedulation= Explode all positions schedulations
-
-DocType= Document type
-ErrorDocType=Select a document type
-DownloadSel=Download
 lastEkesDate=Last conf. date
+noConfirms=No confirms
