--- a/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_en.properties
@@ -24,7 +24,7 @@ searchOrders = Search Orders
 
 correctConfirmPositions = Positions correctly elaborated
 positionNotConfirmable = Orders & position: {0} are locked by other users. Is not possible to confirm
-allPositionNotConfirmable = Tutte le posizioni degli ordini selezionate non possono essere confermate in quanto elaborate da altri utenti
+allPositionNotConfirmable = All selected order positions can not be confirmed. Are locked by other users
  
  
 #MESSAGES:
