--- a/AUPSUP_HTML5_CONTRACTS/webapp/i18n/i18n_en_EN.properties
+++ b/AUPSUP_HTML5_CONTRACTS/webapp/i18n/i18n_en_EN.properties
@@ -24,7 +24,7 @@ searchOrders = Search Orders
 
 correctConfirmPositions = Positions correctly elaborated
 positionNotConfirmable = Positions {0} are not confirmable. Are locked by other users.
-allPositionNotConfirmable = All selected order positions can not be confirmed. Are locked by other users.
+allPositionNotConfirmable = All selected order positions can not be confirmed. They are locked by other users
  
 #MESSAGES:
 noOrderFound = No orders found
