--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_en_EN.properties
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_en_EN.properties
@@ -24,7 +24,7 @@ searchOrders = Search Orders
 
 correctConfirmPositions = Positions correctly elaborated
 positionNotConfirmable = Orders & position: {0} are locked by other users. Is not possible to confirm
-allPositionNotConfirmable = All selected order positions can not be confirmed. Are locked by other users
+allPositionNotConfirmable = All selected order positions can not be confirmed. They are locked by other users
  
 #MESSAGES:
 noOrderFound = No orders found
