--- a/AUPSUP_HTML5_CONTRACTS/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_CONTRACTS/webapp/i18n/i18n_en.properties
@@ -447,3 +447,5 @@ explodeAllSchedulation= Explode all positions schedulations
 DocType= Document type
 ErrorDocType=Select a document type
 DownloadSel=Download
+
+cantOpenOrder=Yuo are not authorized to open this order
