--- a/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_it_IT.properties
+++ b/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_it_IT.properties
@@ -439,3 +439,4 @@ DocType= Tipo documento
 ErrorDocType=Selezionare un tipo documento
 DownloadSel=Download
 lastEkesDate=Data ultima conf.
+cantOpenOrder=Yuo are not authorized to open this order
