--- a/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_pl.properties
+++ b/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_pl.properties
@@ -189,3 +189,4 @@ ZENTRATA=Otrzymano
 ZGTYP=Typ certyfikatu
 ZTERM=Warunek płatności
 lastEkesDate=Last conf. date
+cantOpenOrder=Yuo are not authorized to open this order
