--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n.properties
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n.properties
@@ -434,3 +434,5 @@ explodeAllSchedulation= Esplodi tutte le schedulazioni di tutte le posizioni
 
 lastEkesDate=Last conf. date
 noConfirms=No confirms
+
+cantOpenOrder=Non si hanno i permessi per visualizzare l''ordine selezionato
