--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_en.properties
@@ -441,3 +441,4 @@ statusColorTitle=Critical order status
 explodeAllSchedulation= Explode all positions schedulations
 lastEkesDate=Last conf. date
 noConfirms=No confirms
+cantOpenOrder=Yuo are not authorized to open this order
