--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_pl.properties
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_pl.properties
@@ -188,3 +188,4 @@ ZGTYP=Typ certyfikatu
 ZTERM=Warunek płatności
 lastEkesDate=Last conf. date
 noConfirms=No confirms
+cantOpenOrder=Yuo are not authorized to open this order
