--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_sv_SE.properties
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_sv_SE.properties
@@ -190,3 +190,4 @@ ZTERM=Betalningsvillkor
 explodeAllSchedulation= Explode all positions schedulations
 lastEkesDate=Last conf. date
 noConfirms=No confirms
+cantOpenOrder=Yuo are not authorized to open this order
