--- a/AUPSUP_HTML5_CONTRACTS/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_CONTRACTS/webapp/i18n/i18n_it.properties
@@ -439,3 +439,5 @@ explodeAllSchedulation= Esplodi tutte le schedulazioni di tutte le posizioni
 DocType= Tipo documento
 ErrorDocType=Selezionare un tipo documento
 DownloadSel=Download
+
+cantOpenOrder=Non si hanno i permessi per visualizzare l''ordine selezionato
