--- a/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n.properties
+++ b/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n.properties
@@ -446,3 +446,4 @@ DownloadSel=Download
 
 lastEkesDate=Last conf. date
 noConfirms=No confirms
+cantOpenOrder=Non si hanno i permessi per visualizzare l''ordine selezionato
