--- a/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_sv_SE.properties
+++ b/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_sv_SE.properties
@@ -193,3 +193,4 @@ DocType= Document type
 ErrorDocType=Select a document type
 DownloadSel=Download
 lastEkesDate=Last conf. date
+cantOpenOrder=Yuo are not authorized to open this order
