--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_it_IT.properties
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_it_IT.properties
@@ -432,3 +432,4 @@ statusColorTitle=Stato critico piani
 explodeAllSchedulation= Esplodi tutte le schedulazioni di tutte le posizioni
 lastEkesDate=Data ultima conf.
 noConfirms=No confirms
+cantOpenOrder=Non si hanno i permessi per visualizzare l''ordine selezionato
