app non conformità - visualizzazione colonna stato + descrizione

--- a/AUPSUP_HTML5_NONCONFORMITA/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_NONCONFORMITA/webapp/i18n/i18n_en.properties
@@ -21,6 +21,7 @@ materialDescr=Material description
  
 #XFLD: 
 status=Status
+STATUSDESCR=Status description 
  
 #XFLD: 
 IDNLF=Supplier material code
