--- a/AUPSUP_HTML5_NONCONFORMITA/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_NONCONFORMITA/webapp/i18n/i18n_it.properties
@@ -21,6 +21,7 @@ materialDescr=Descrizione materiale
  
 #XFLD: 
 status=Stato
+STATUSDESCR=Descrizione Stato
  
 #XFLD: 
 IDNLF=Codice materiale fornitore
