implementazione logica per app planning

--- a/AUPSUP_HTML5_PLANNING/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_PLANNING/webapp/i18n/i18n_en.properties
@@ -101,6 +101,9 @@ WEEK11=Week 11
 #XTXT: 
 EKGRP=Purchases Group
 
+#XTXT: 
+DELIVERY_TYPE=Delivery Type
+
 METASUP = Metasupplier
 
 supplier= Supplier
@@ -130,3 +133,6 @@ Search = Search
 
 NAME1 = Supplier
 Confirm=Confirm
+
+committente=Delivery to customer
+terzi=Delivery to a third party
