--- a/AUPSUP_HTML5_PLANNING/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_PLANNING/webapp/i18n/i18n_it.properties
@@ -33,6 +33,9 @@ EKORG=Organizzazione acquisti
 EKGRP=Gruppo acquisti
 
 #XTXT: 
+DELIVERY_TYPE=Tipo Consegna
+
+#XTXT: 
 SchedMod=Schedule Mod.
 
 #XTIT: 
@@ -131,3 +134,6 @@ KTMNG=Qt\u00E0 contratto
 
 Search = Ricerca
 Confirm=Conferma
+
+committente=Consegna presso committente
+terzi=Consegna presso terzi
