modifiche per customizing

--- a/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_en.properties
+++ b/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_en.properties
@@ -450,3 +450,4 @@ ErrorDocType=Select a document type
 DownloadSel=Download
 lastEkesDate=Last conf. date
 cantOpenOrder=Yuo are not authorized to open this order
+ConfirmOrdAckn=Order acknowledge
