--- a/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_pl.properties
+++ b/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_pl.properties
@@ -190,3 +190,4 @@ ZGTYP=Typ certyfikatu
 ZTERM=Warunek płatności
 lastEkesDate=Last conf. date
 cantOpenOrder=Yuo are not authorized to open this order
+ConfirmOrdAckn=Order acknowledge
