--- a/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_it_IT.properties
+++ b/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_it_IT.properties
@@ -440,3 +440,4 @@ ErrorDocType=Selezionare un tipo documento
 DownloadSel=Download
 lastEkesDate=Data ultima conf.
 cantOpenOrder=Yuo are not authorized to open this order
+ConfirmOrdAckn=Riconoscimento ordine
