--- a/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_sv.properties
+++ b/AUPSUP_HTML5_PURCH_ORDS/webapp/i18n/i18n_sv.properties
@@ -194,3 +194,4 @@ ErrorDocType=Select a document type
 DownloadSel=Download
 lastEkesDate=Last conf. date
 cantOpenOrder=Yuo are not authorized to open this order
+ConfirmOrdAckn=Order acknowledge
