--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_it.properties
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_it.properties
@@ -433,3 +433,4 @@ explodeAllSchedulation= Esplodi tutte le schedulazioni di tutte le posizioni
 lastEkesDate=Data ultima conf.
 noConfirms=No confirms
 cantOpenOrder=Non si hanno i permessi per visualizzare l''ordine selezionato
+ConfirmOrdAckn=Conferma ordine
