--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_sv.properties
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/i18n/i18n_sv.properties
@@ -192,3 +192,4 @@ explodeAllSchedulation= Explode all positions schedulations
 lastEkesDate=Last conf. date
 noConfirms=No confirms
 cantOpenOrder=Yuo are not authorized to open this order
+ConfirmOrdAckn=Order acknowledge
